--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "trailblazer",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,14 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.13",
-    "expo-status-bar": "~1.11.1",
+    "expo": "51.0.6",
     "react": "18.2.0",
-    "react-native": "0.73.5",
-    "react-native-maps": "^1.11.3"
+    "react-native": "0.74.1",
+    "react-native-svg": "15.2.0",
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "private": true
 }
