--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
     "expo": "51.0.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
-    "react-native-svg": "15.2.0",
-    "react-native-maps": "1.14.0"
+    "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
