--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
+    "@react-navigation/native": "^7.0.0-alpha.18",
     "@react-navigation/stack": "^6.3.29",
     "expo": "51.0.6",
     "react": "18.2.0",
