--- a/app.json
+++ b/app.json
@@ -22,6 +22,19 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      [
+        "expo-font",
+        {
+          "fonts": [
+            "./src/assets/fonts/Roboto-Bold.ttf",
+            "./src/assets/fonts/Roboto-Light.ttf",
+            "./src/assets/fonts/Roboto-Medium.ttf",
+            "./src/assets/fonts/Roboto-Regular.ttf"
+          ]
+        }
+      ]
+    ]
   }
 }
