--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "expo": "51.0.6",
+    "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-crypto": "^2.2.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "viem": "^2.11.0"
+    "text-encoding": "^0.7.0",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
