--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "text-encoding": "^0.7.0",
-    "web3": "^4.8.0"
+    "web3": "^4.8.0",
     "react-native-web": "~0.19.10",
     "expo-font": "~12.0.5"
   },
