--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "51.0.6",
+    "expo-font": "~12.0.5",
     "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -27,10 +29,9 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
-    "text-encoding": "^0.7.0",
-    "web3": "^4.8.0",
     "react-native-web": "~0.19.10",
-    "expo-font": "~12.0.5"
+    "text-encoding": "^0.7.0",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
