--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
     "text-encoding": "^0.7.0",
-    "web3": "^4.8.0"
+    "web3": "^4.8.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
