--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/native": "^6.1.17",
@@ -17,6 +18,7 @@
     "axios": "^1.7.2",
     "expo": "51.0.6",
     "expo-font": "~12.0.5",
+    "expo-location": "~17.0.1",
     "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -30,10 +32,9 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
+    "react-router-dom": "^6.23.1",
     "text-encoding": "^0.7.0",
-    "web3": "^4.8.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-location": "~17.0.1"
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
