--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-share": "^10.2.1",
     "react-native-svg": "15.2.0",
+    "react-native-view-shot": "3.8.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
     "text-encoding": "^0.7.0",
-    "web3": "^4.8.0"
+    "web3": "^4.8.0",
+    "expo-sharing": "~12.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
