--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "51.0.6",
     "expo-font": "~12.0.5",
     "expo-location": "~17.0.1",
+    "expo-sharing": "~12.0.1",
     "node-libs-browser": "^2.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,12 +33,12 @@
     "react-native-screens": "3.31.1",
     "react-native-share": "^10.2.1",
     "react-native-svg": "15.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-view-shot": "3.8.0",
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
     "text-encoding": "^0.7.0",
-    "web3": "^4.8.0",
-    "expo-sharing": "~12.0.1"
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
