--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.7.2",
     "expo": "51.0.6",
     "expo-font": "~12.0.5",
+    "expo-linear-gradient": "^13.0.2",
     "expo-location": "~17.0.1",
     "expo-sharing": "~12.0.1",
     "node-libs-browser": "^2.2.1",
