--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.7.2",
-    "expo": "51.0.6",
-    "expo-font": "~12.0.5",
+    "expo": "~51.0.9",
+    "expo-dev-client": "~4.0.15",
     "expo-linear-gradient": "^13.0.2",
     "expo-location": "~17.0.1",
     "expo-sharing": "~12.0.1",
@@ -26,7 +26,6 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-crypto": "^2.2.0",
-    "react-native-dotenv": "^3.4.11",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
@@ -39,7 +38,8 @@
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.23.1",
     "text-encoding": "^0.7.0",
-    "web3": "^4.8.0"
+    "web3": "^4.8.0",
+    "expo-font": "~12.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
