--- a/package.json
+++ b/package.json
@@ -39,7 +39,10 @@
     "react-router-dom": "^6.23.1",
     "text-encoding": "^0.7.0",
     "web3": "^4.8.0",
-    "expo-font": "~12.0.6"
+    "expo-font": "~12.0.6",
+    "react-native-gesture-handler": "~2.16.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
